# openbmc

./: .eslintrc.json  .gitignore  .gitreview  .templateconf  LICENSE  MAINTAINERS  OWNERS  README.hardware  README.md  TEST  TESTFILE  bitbake  documentation  eslint.config.js  fru-read-gen.cpp  fru-read-gen.cpp.witherspoon  groups  meta  meta-arm  meta-openembedded  meta-poky  meta-raspberrypi  meta-security  meta-selftest  meta-skeleton  meta-virtualization  meta-yocto  meta-yocto-bsp  myfile  oe-init-build-env  oe-init-build-env-memres  openbmc-env  project.config  scripts  setup  testpr.txt
poky/scripts/contrib/oe-image-files-spdx/: .gitignore  pyproject.toml
upstream-layers/bitbake/: .b4-config  .gitignore  LICENSE.MIT  MANIFEST.in  README  SECURITY.md  TODO  pyproject.toml  toaster-requirements.txt  vendor.txt
upstream-layers/bitbake/classes/: base.bbclass
upstream-layers/bitbake/conf/: bitbake.conf
upstream-layers/bitbake/contrib/hashserv/: Dockerfile
upstream-layers/bitbake/contrib/prserv/: Dockerfile
upstream-layers/bitbake/contrib/vim/ftdetect/: bitbake.vim
upstream-layers/bitbake/contrib/vim/indent/: bitbake.vim
upstream-layers/bitbake/default-registry/configurations/: oe-nodistro-master.conf.json  oe-nodistro-whinlatter.conf.json  oe-nodistro-wrynose.conf.json  poky-master.conf.json  poky-whinlatter.conf.json  poky-wrynose.conf.json
upstream-layers/bitbake/doc/: .gitignore  COPYING.MIT  Makefile  README  conf.py  index.rst  releases.rst  setversions.py
upstream-layers/bitbake/doc/bitbake-user-manual/: bitbake-user-manual-environment-setup.rst  bitbake-user-manual-execution.rst  bitbake-user-manual-fetching.rst  bitbake-user-manual-hello.rst  bitbake-user-manual-intro.rst  bitbake-user-manual-metadata.rst  bitbake-user-manual-ref-variables.rst
upstream-layers/bitbake/doc/sphinx-static/: switchers.js.in  theme_overrides.css
upstream-layers/bitbake/lib/: pyinotify.py
upstream-layers/bitbake/lib/bb/: __init__.py  acl.py  build.py  codeparser.py  cooker.py  cookerdata.py  daemonize.py  data.py  data_smart.py  event.py  filter.py  main.py  msg.py  process.py  runqueue.py  siggen.py  taskdata.py  tinfoil.py  utils.py  xattr.py
upstream-layers/bitbake/lib/bb/_vendor/: __init__.py  ply.pyi  progressbar.pyi  simplediff.pyi  typing_extensions.py
upstream-layers/bitbake/lib/bb/asyncrpc/: serv.py
upstream-layers/bitbake/lib/bb/fetch2/: __init__.py  az.py  clearcase.py  crate.py  gcp.py  git.py  gitannex.py  gitsm.py  gomod.py  hg.py  npm.py  npmsw.py  osc.py  perforce.py  repo.py  s3.py  sftp.py  ssh.py  svn.py  wget.py
upstream-layers/bitbake/lib/bb/parse/: ast.py
upstream-layers/bitbake/lib/bb/pysh/: pyshlex.py  pyshyacc.py
upstream-layers/bitbake/lib/bb/server/: process.py
upstream-layers/bitbake/lib/bb/tests/: codeparser.py  color.py  cow.py  data.py  fetch.py  filter.py  parse.py  setup.py  siggen.py  utils.py
upstream-layers/bitbake/lib/bb/ui/: eventreplay.py  knotty.py  ncurses.py  taskexp.py  taskexp_ncurses.py  teamcity.py  toasterui.py  uihelper.py
upstream-layers/bitbake/lib/bblayers/: __init__.py  layerindex.py  query.py
upstream-layers/bitbake/lib/hashserv/: __init__.py  client.py  server.py  sqlalchemy.py  tests.py
upstream-layers/bitbake/lib/layerindexlib/: README  __init__.py  cooker.py  restapi.py
upstream-layers/bitbake/lib/layerindexlib/tests/: layerindexobj.py  restapi.py
upstream-layers/bitbake/lib/ply/: yacc.py
upstream-layers/bitbake/lib/progressbar/: progressbar.py
upstream-layers/bitbake/lib/prserv/: __init__.py  db.py  tests.py
upstream-layers/bitbake/lib/toaster/: manage.py
upstream-layers/bitbake/lib/toaster/bldcollector/: views.py
upstream-layers/bitbake/lib/toaster/bldcontrol/: admin.py  bbcontroller.py  localhostbecontroller.py  models.py
upstream-layers/bitbake/lib/toaster/tests/: toaster-tests-requirements.txt
upstream-layers/bitbake/lib/toaster/toastergui/: urls.py  views.py  widgets.py
upstream-layers/bitbake/lib/toaster/toastermain/: settings.py  (+1 more)
upstream-layers/bitbake/packaging-pypi/bitbake-setup/: BUILD.md  LICENSE  README.md  package-bitbake-setup.py  pyproject.toml
upstream-layers/bitbake/setup-schema/: bitbake-setup.schema.json  layers.schema.json
(+73937 files in other folders)
